--- a/package.json
+++ b/package.json
@@ -2,9 +2,11 @@
   "name": "mojang-minecraft-api",
   "version": "1.0.0",
   "description": "🎮 Wrapper for the Mojang API",
-  "main": "index.js",
+  "main": "lib/index.js",
+  "types": "lib",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "tsc -p .",
+    "doc" : "jsdoc2md lib/index.js"
   },
   "repository": {
     "type": "git",
@@ -18,6 +20,13 @@
   },
   "homepage": "https://github.com/DaanKorver/mojang-minecraft-api#readme",
   "devDependencies": {
+    "@types/node": "^14.14.41",
+    "jsdoc-to-markdown": "^7.0.1",
     "typescript": "^4.2.4"
+  },
+  "dependencies": {
+    "axios": "^0.21.1",
+    "canvas": "^2.7.0",
+    "image-clipper": "^0.4.4"
   }
 }
