--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -18,6 +18,6 @@ jobs:
           registry-url: https://npm.pkg.github.com/
       - name: 🚀 publish
         run: npm install
-        run: npm publish
+             npm publish
         env:
             NODE_AUTH_TOKEN: ${{secrets.NPM_AUTH_TOKEN}}
