--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -1,23 +1,18 @@
-name: "🚀 Publish"
+name: Node.js Package
 on:
-  push:
-    branches:
-      - master
-
-jobs:
   release:
-    name: 🚀 Publish
+    types: [created]
+jobs:
+  build:
     runs-on: ubuntu-latest
     steps:
-      - name: 🚚 Get Code
-        uses: actions/checkout@v2.1.1
-      - name: 🚛 Setup Node
-        uses: actions/setup-node@v1.4.2
-        with:
-          node-version: 12
-          registry-url: https://npm.pkg.github.com/
-      - name: 🚀 publish
-        run: npm install
-             npm publish
-        env:
-            NODE_AUTH_TOKEN: ${{secrets.NPM_AUTH_TOKEN}}
+    - uses: actions/checkout@v2
+    - uses: actions/setup-node@v2
+      with:
+        node-version: '12.x'
+        registry-url: 'https://npm.pkg.github.com'
+        scope: '@octocat'
+    - run: npm install
+    - run: npm publish
+      env:
+        NODE_AUTH_TOKEN: ${{ secrets.PACKAGE_TOKEN }}
