--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -1,7 +1,8 @@
 name: Node.js Package
 on:
-  release:
-    types: [created]
+  push:
+    brances: 
+      - master
 jobs:
   build:
     runs-on: ubuntu-latest
