--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "mojang-minecraft-api",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "description": "🎮 Wrapper for the Mojang API",
   "main": "lib/index.js",
   "publishConfig": {
-    "registry": "https://npm.pkg.github.com/daankorver"
+    "registry": "https://registry.npmjs.org/"
   },
   "types": "lib",
   "scripts": {
